--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,19 @@
-<resources>
-    <string name="app_name">FKDedinjeBGD</string>
+﻿<resources>
+    <string name="app_name">ФК Дедиње БГД</string>
 
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
-    <string name="title_activity_live_score">LiveScoreActivity</string>
+
+    <string name="btn_home">О клубу</string>
+    <string name="btn_management">Управа</string>
+    <string name="btn_squad">Тим</string>
+    <string name="btn_fixtures">Распоред</string>
+    <string name="btn_standings">Табела</string>
+    <string name="btn_livescore">LiveScore</string>
+    <string name="title_activity_management">Управа</string>
+    <string name="title_activity_squad">Тим</string>
+    <string name="title_activity_fixtures">Распоред и резултати</string>
+    <string name="title_activity_standings">Табела</string>
+    <string name="title_activity_home">О клубу</string>
+    <string name="title_activity_maps">Како до стадона</string>
+    <string name="title_activity_live_score">Уживо праћење резултата</string>
+
 </resources>
