--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="title_activity_maps">Map</string>
 
 
+    <string name="admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>
 </resources>
